fix forums navbar overlapping page content / thread titles

--- a/app/assets/stylesheets/thredded-overrides.scss
+++ b/app/assets/stylesheets/thredded-overrides.scss
@@ -12,7 +12,14 @@
   }
 
   .thredded--user-navigation {
-    height: 64px;
+    height: 70px;
+
+    margin-top: 10px;
+    margin-right: 10px;
+
+    .thredded--user-navigation--item a {
+      padding: 0;
+    }
   }
 
   .thredded--currently-online {
